--- a/manual/Emacspeak-Keybindings-On-emacspeak_002ddtk_002dsubmap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002ddtk_002dsubmap.html
@@ -145,6 +145,10 @@
       <dd>
         <p>outloud</p>
       </dd>
+      <dt><span><kbd>C-s</kbd></span></dt>
+      <dd>
+        <p>dectalk-soft</p>
+      </dd>
       <dt><span><kbd>C-v</kbd></span></dt>
       <dd>
         <p>global-voice-lock-mode</p>
