--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -577,6 +577,15 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
+        "emacspeak_002dmpv.html#index-_003cfn_003e-C_002d_003b-l"><code>
+        &lt;fn&gt; C-; l</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "emacspeak_002dmpv.html">emacspeak-mpv</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
         "emacspeak_002dwizards.html#index-_003cfn_003e-C_002d_003cleft_003e">
         <code>&lt;fn&gt; C-&lt;left&gt;</code></a>:</td>
         <td>&nbsp;</td>
@@ -1302,6 +1311,15 @@
         <td>&nbsp;</td>
         <td valign="top"><a href=
         "outloud_002dvoices.html">outloud-voices</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
+        "dectalk_002dvoices.html#index-_003cfn_003e-d-C_002ds"><code>
+        &lt;fn&gt; d C-s</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "dectalk_002dvoices.html">dectalk-voices</a></td>
       </tr>
       <tr>
         <td></td>
@@ -3818,6 +3836,15 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
+        "emacspeak_002dmpv.html#index-C_002de-C_002d_003b-l"><code>C-e
+        C-; l</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "emacspeak_002dmpv.html">emacspeak-mpv</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
         "emacspeak_002dwizards.html#index-C_002de-C_002d_003cleft_003e">
         <code>C-e C-&lt;left&gt;</code></a>:</td>
         <td>&nbsp;</td>
@@ -4631,6 +4658,15 @@
         <td>&nbsp;</td>
         <td valign="top"><a href=
         "outloud_002dvoices.html">outloud-voices</a></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td valign="top"><a href=
+        "dectalk_002dvoices.html#index-C_002de-d-C_002ds"><code>C-e
+        d C-s</code></a>:</td>
+        <td>&nbsp;</td>
+        <td valign="top"><a href=
+        "dectalk_002dvoices.html">dectalk-voices</a></td>
       </tr>
       <tr>
         <td></td>
