--- a/manual/dectalk_002dvoices.html
+++ b/manual/dectalk_002dvoices.html
@@ -78,6 +78,8 @@
       <h4 class="subsection">12.3.1 Dectalk-Voices Commands</h4>
       <ul class="section-toc">
         <li><a href="#dectalk" accesskey="1">dectalk</a></li>
+        <li><a href="#dectalk_002dsoft" accesskey=
+        "2">dectalk-soft</a></li>
       </ul>
       <div class="subsubsection" id="dectalk">
         <h4 class="subsubsection">12.3.1.1 dectalk</h4>
@@ -98,6 +100,31 @@
             </dl><span id="index-dectalk-1"></span>
             <div class="format">
               <pre class="format">Dectalk TTS.
+</pre>
+            </div>
+          </dd>
+        </dl>
+      </div>
+      <div class="subsubsection" id="dectalk_002dsoft">
+        <h4 class="subsubsection">12.3.1.2 dectalk-soft</h4>
+        <dl class="def">
+          <dt id="index-dectalk_002dsoft"><span class=
+          "category">Command:</span>
+          <span><strong>dectalk-soft</strong> <a href=
+          '#index-dectalk_002dsoft' class=
+          'copiable-anchor'>¶</a></span></dt>
+          <dd>
+            <dl compact="compact">
+              <dt id='index-C_002de-d-C_002ds'><span><kbd>C-e d
+              C-s</kbd> <a href='#index-C_002de-d-C_002ds' class=
+              'copiable-anchor'>¶</a></span></dt>
+              <dt id='index-_003cfn_003e-d-C_002ds'>
+              <span><kbd>&lt;fn&gt; d C-s</kbd> <a href=
+              '#index-_003cfn_003e-d-C_002ds' class=
+              'copiable-anchor'>¶</a></span></dt>
+            </dl><span id="index-dectalk_002dsoft-1"></span>
+            <div class="format">
+              <pre class="format">Software Dectalk TTS.
 </pre>
             </div>
           </dd>
