--- a/manual/emacspeak_002dmpv.html
+++ b/manual/emacspeak_002dmpv.html
@@ -85,6 +85,8 @@
         accesskey="1">emacspeak-mpv-play-url</a></li>
         <li><a href="#emacspeak_002dmpv_002dposition" accesskey=
         "2">emacspeak-mpv-position</a></li>
+        <li><a href="#emacspeak_002dmpv_002dstore_002dlink"
+        accesskey="3">emacspeak-mpv-store-link</a></li>
       </ul>
       <div class="subsubsection" id=
       "emacspeak_002dmpv_002dplay_002durl">
@@ -149,6 +151,34 @@
             "index-emacspeak_002dmpv_002dposition-1"></span>
             <div class="format">
               <pre class="format">Show position and duration.
+</pre>
+            </div>
+          </dd>
+        </dl>
+      </div>
+      <div class="subsubsection" id=
+      "emacspeak_002dmpv_002dstore_002dlink">
+        <h4 class="subsubsection">12.127.1.3
+        emacspeak-mpv-store-link</h4>
+        <dl class="def">
+          <dt id="index-emacspeak_002dmpv_002dstore_002dlink">
+          <span class="category">Command:</span>
+          <span><strong>emacspeak-mpv-store-link</strong> <a href=
+          '#index-emacspeak_002dmpv_002dstore_002dlink' class=
+          'copiable-anchor'>¶</a></span></dt>
+          <dd>
+            <dl compact="compact">
+              <dt id='index-C_002de-C_002d_003b-l'><span><kbd>C-e
+              C-; l</kbd> <a href='#index-C_002de-C_002d_003b-l'
+              class='copiable-anchor'>¶</a></span></dt>
+              <dt id='index-_003cfn_003e-C_002d_003b-l'>
+              <span><kbd>&lt;fn&gt; C-; l</kbd> <a href=
+              '#index-_003cfn_003e-C_002d_003b-l' class=
+              'copiable-anchor'>¶</a></span></dt>
+            </dl><span id=
+            "index-emacspeak_002dmpv_002dstore_002dlink-1"></span>
+            <div class="format">
+              <pre class="format">Store link at current position.
 </pre>
             </div>
           </dd>
