--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -2999,7 +2999,7 @@ of the source buffer.
           "index-emacspeak_002dwizards_002dshell_002ddirectory_002dreset">
           <span class="category">Command:</span>
           <span><strong>emacspeak-wizards-shell-directory-reset</strong>
-          <a href=
+          <em>(&amp;optional prefix)</em> <a href=
           '#index-emacspeak_002dwizards_002dshell_002ddirectory_002dreset'
           class='copiable-anchor'>¶</a></span></dt>
           <dd>
@@ -3023,6 +3023,10 @@ of the source buffer.
               <pre class=
               "format">Set current directory to this shell’s initial directory if one was
 defined.  If not in a shell buffer, switch to our Home shell buffer.
+With interactive prefix-arg, change this shell’s  project directory to
+the current directory.
+
+(fn &amp;optional PREFIX)
 </pre>
             </div>
           </dd>
