--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -1150,11 +1150,11 @@ When called interactively, CHAR defaults to the character after point.
           <p>Default Value: <code><tt>((150 . -) (9473 . -) (9475 .
           |) (176 . degrees ) (8451 . Degree C) (8457 . Degree F )
           (8220 . ") (8221 . ") (8902 . *) (173 . -) (8216 . `)
-          (8217 . ') (8208 . -) (8211 . -- ) (8212 . --- ) (8202 .
-          ) (65279 . ) (8204 . ) (8203 . ) (8201 . ) (8213 . ----)
-          (8214 . ||) (8230 . ...) (8226 . bullet ) (149 . ... )
-          (8482 . TM) (64256 . ff) (64257 . fi) (64258 . fl) (64259
-          . ffi) (64260 . Ffl))</tt></code></p>
+          (8217 . ') (8208 . dash ) (8211 . dash dash ) (8212 . em
+          dash ) (8202 . ) (65279 . ) (8204 . ) (8203 . ) (8201 . )
+          (8213 . ----) (8214 . ||) (8230 . ...) (8226 . bullet )
+          (149 . ... ) (8482 . TM) (64256 . ff) (64257 . fi) (64258
+          . fl) (64259 . ffi) (64260 . Ffl))</tt></code></p>
         </dd>
       </dl>
       <dl class="def">
