--- a/manual/emacspeak_002dkeymap.html
+++ b/manual/emacspeak_002dkeymap.html
@@ -218,9 +218,8 @@
           Default Value: @code{@verb{|((.
           emacspeak-wizards-shell-directory-reset) (C-n
           emacspeak-wizards-google-headlines) (R
-          emacspeak-webspace-feed-reader) (SPC scratch-buffer) (a
-          emacspeak-wizards-execute-asynchronously) (c calculator)
-          (d emacspeak-dired-downloads) (e elfeed) (h
+          emacspeak-webspace-feed-reader) (SPC scratch-buffer) (c
+          calculator) (d emacspeak-dired-downloads) (e elfeed) (h
           emacspeak-org-capture-link) (l
           emacspeak-wizards-locate-content) (m
           emacspeak-wizards-view-buffers-filtered-by-this-mode) (n
