--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -1874,15 +1874,9 @@ interactive prompt.
           '#index-emacspeak_002dwizards_002dexecute_002dasynchronously'
           class='copiable-anchor'>¶</a></span></dt>
           <dd>
-            <dl compact="compact">
-              <dt id='index-C_002d_002e-a'><span><kbd>C-. a</kbd>
-              <a href='#index-C_002d_002e-a' class=
-              'copiable-anchor'>¶</a></span></dt>
-              <dt id='index-C_002dx-_0040-s-a'><span><kbd>C-x @ s
-              a</kbd> <a href='#index-C_002dx-_0040-s-a' class=
-              'copiable-anchor'>¶</a></span></dt>
-            </dl><span id=
-            "index-emacspeak_002dwizards_002dexecute_002dasynchronously-1"></span>
+            <span id=
+            "index-emacspeak_002dwizards_002dexecute_002dasynchronously-1">
+            </span>
             <div class="format">
               <pre class=
               "format">Read key-sequence, then execute its command on a new thread.
