--- a/manual/amixer.html
+++ b/manual/amixer.html
@@ -84,12 +84,14 @@
       <h4 class="subsection">12.1.1 Amixer Commands</h4>
       <ul class="section-toc">
         <li><a href="#amixer-2" accesskey="1">amixer</a></li>
+        <li><a href="#amixer_002dquery" accesskey=
+        "2">amixer-query</a></li>
         <li><a href="#amixer_002dstore" accesskey=
-        "2">amixer-store</a></li>
+        "3">amixer-store</a></li>
         <li><a href="#amixer_002dvolume_002ddown" accesskey=
-        "3">amixer-volume-down</a></li>
+        "4">amixer-volume-down</a></li>
         <li><a href="#amixer_002dvolume_002dup" accesskey=
-        "4">amixer-volume-up</a></li>
+        "5">amixer-volume-up</a></li>
       </ul>
       <div class="subsubsection" id="amixer-2">
         <h4 class="subsubsection">12.1.1.1 amixer</h4>
@@ -118,8 +120,28 @@ Interactive prefix arg refreshes cache.
           </dd>
         </dl>
       </div>
+      <div class="subsubsection" id="amixer_002dquery">
+        <h4 class="subsubsection">12.1.1.2 amixer-query</h4>
+        <dl class="def">
+          <dt id="index-amixer_002dquery"><span class=
+          "category">Command:</span>
+          <span><strong>amixer-query</strong> <em>(&amp;optional
+          refresh)</em> <a href='#index-amixer_002dquery' class=
+          'copiable-anchor'>¶</a></span></dt>
+          <dd>
+            <span id="index-amixer_002dquery-1"></span>
+            <div class="format">
+              <pre class=
+              "format">Show setting for specified control.
+
+(fn &amp;optional REFRESH)
+</pre>
+            </div>
+          </dd>
+        </dl>
+      </div>
       <div class="subsubsection" id="amixer_002dstore">
-        <h4 class="subsubsection">12.1.1.2 amixer-store</h4>
+        <h4 class="subsubsection">12.1.1.3 amixer-store</h4>
         <dl class="def">
           <dt id="index-amixer_002dstore"><span class=
           "category">Command:</span>
@@ -136,7 +158,7 @@ Interactive prefix arg refreshes cache.
         </dl>
       </div>
       <div class="subsubsection" id="amixer_002dvolume_002ddown">
-        <h4 class="subsubsection">12.1.1.3 amixer-volume-down</h4>
+        <h4 class="subsubsection">12.1.1.4 amixer-volume-down</h4>
         <dl class="def">
           <dt id="index-amixer_002dvolume_002ddown"><span class=
           "category">Command:</span>
@@ -168,7 +190,7 @@ Interactive prefix arg ‘PROMPT’ reads percentage as a number
         </dl>
       </div>
       <div class="subsubsection" id="amixer_002dvolume_002dup">
-        <h4 class="subsubsection">12.1.1.4 amixer-volume-up</h4>
+        <h4 class="subsubsection">12.1.1.5 amixer-volume-up</h4>
         <dl class="def">
           <dt id="index-amixer_002dvolume_002dup"><span class=
           "category">Command:</span>
