--- a/manual/index.html
+++ b/manual/index.html
@@ -56,7 +56,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on November 16, 2022.</p>
+  Desktop</strong> and was last updated on November 21, 2022.</p>
   <div class="top" id="Top">
     <div class="header">
       <p>Next: <a href="Copyright.html" accesskey="n" rel=
@@ -469,18 +469,22 @@
                       <li><a id="toc-amixer-2" href=
                       "amixer.html#amixer-2" name=
                       "toc-amixer-2">12.1.1.1 amixer</a></li>
+                      <li><a id="toc-amixer_002dquery" href=
+                      "amixer.html#amixer_002dquery" name=
+                      "toc-amixer_002dquery">12.1.1.2
+                      amixer-query</a></li>
                       <li><a id="toc-amixer_002dstore" href=
                       "amixer.html#amixer_002dstore" name=
-                      "toc-amixer_002dstore">12.1.1.2
+                      "toc-amixer_002dstore">12.1.1.3
                       amixer-store</a></li>
                       <li><a id="toc-amixer_002dvolume_002ddown"
                       href="amixer.html#amixer_002dvolume_002ddown"
                       name=
-                      "toc-amixer_002dvolume_002ddown">12.1.1.3
+                      "toc-amixer_002dvolume_002ddown">12.1.1.4
                       amixer-volume-down</a></li>
                       <li><a id="toc-amixer_002dvolume_002dup"
                       href="amixer.html#amixer_002dvolume_002dup"
-                      name="toc-amixer_002dvolume_002dup">12.1.1.4
+                      name="toc-amixer_002dvolume_002dup">12.1.1.5
                       amixer-volume-up</a></li>
                     </ul>
                   </li>
