--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -3365,8 +3365,19 @@ current local  value to the result.
       <dl class="def">
         <dt id="index-User-Option-88"><span class=
         "category">Variable:</span> <span><strong>User
-        Option</strong> <em>emacspeak-speak-time-format-string</em>
+        Option</strong> <em>emacspeak-speak-show-volume</em>
         <a href='#index-User-Option-88' class=
+        'copiable-anchor'>¶</a></span></dt>
+        <dd>
+          <p>Show volume as part of minor-mode-line.</p>
+          <p>Default Value: <code><tt>nil</tt></code></p>
+        </dd>
+      </dl>
+      <dl class="def">
+        <dt id="index-User-Option-89"><span class=
+        "category">Variable:</span> <span><strong>User
+        Option</strong> <em>emacspeak-speak-time-format-string</em>
+        <a href='#index-User-Option-89' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>Format string that specifies how the time should be
@@ -3377,10 +3388,10 @@ current local  value to the result.
         </dd>
       </dl>
       <dl class="def">
-        <dt id="index-User-Option-89"><span class=
+        <dt id="index-User-Option-90"><span class=
         "category">Variable:</span> <span><strong>User
         Option</strong> <em>emacspeak-speak-zoneinfo-directory</em>
-        <a href='#index-User-Option-89' class=
+        <a href='#index-User-Option-90' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>Directory containing timezone data.</p>
@@ -3389,10 +3400,10 @@ current local  value to the result.
         </dd>
       </dl>
       <dl class="def">
-        <dt id="index-User-Option-90"><span class=
+        <dt id="index-User-Option-91"><span class=
         "category">Variable:</span> <span><strong>User
         Option</strong> <em>emacspeak-word-echo</em> <a href=
-        '#index-User-Option-90' class=
+        '#index-User-Option-91' class=
         'copiable-anchor'>¶</a></span></dt>
         <dd>
           <p>If t, then emacspeak echoes words as you type. You can
