table navbar rearrange

--- a/html/emacspeak.html
+++ b/html/emacspeak.html
@@ -31,35 +31,22 @@
 
     <table summary="navigation bar">
       <tr>
-        <td colspan="9"><img src="emacspeak.jpg" width="150" height=
-        "216" alt="EMACSPEAK Logo" /></td>
+<td colspan="6">
+  <img src="emacspeak.jpg" width="150" height="216" alt="EMACSPEAK Logo"/> </td>
       </tr>
-
       <tr class="navbar">
-        <td><a href=
+<td><a href=
                "https://github.com/tvraman/emacspeak/releases/download/57.0/emacspeak-57.0.tar.bz2">Download</a></td>
-        <td><a href=
+<td><a href=
                "https://github.com/tvraman/emacspeak">Sources</a></td>
-        <td><a href="http://tvraman.github.io/emacspeak/manual/">Manual</a></td>
-        <td><a href="install-guide/">Installation</a></td>
-        <td><a href="user-guide/">Usage</a></td>
-        <td><a href="https://tvraman.github.io/emacspeak/tips.html">Tips</a></td>
-        <td><a href="https://tvraman.github.io/emacspeak/applications.html">Tools</a></td>
-        <td><a href="http://emacspeak.blogspot.com">Blog</a></td>
-        <td><a href=
+<td><a href="http://tvraman.github.io/emacspeak/manual/">Manual</a></td>
+<td><a href="http://emacspeak.blogspot.com">Blog</a></td>
+<td><a href=
                "https://www.emacspeak.org">Support</a></td>
-      </tr>
-
-      <tr>
-        <td colspan="6"><a href="raman/">About the author</a></td>
-
-        <td colspan="3"><a href=
-                           "http://sourceforge.net/projects/emacspeak"><img src=
-                           "http://sourceforge.net/sflogo.php?group_id=2238" width="88"
-                           height="31" border="0" alt="SourceForge" /></a></td>
+<td ><a href="raman/">Raman</a></td>
       </tr>
 <tr>
-        <td colspan="9">
+<td colspan="6">
           <img src="https://tvraman.github.io/tilden-face.jpg" width="150" height=
         "216" alt="Tilden" /></td>
       </tr>
@@ -111,6 +98,16 @@
       "http://www.google.com/search?q=emacspeak">Google</a> for
       additional details.</p>
 
+
+ <table>
+   <tr>
+     <td><a href="install-guide/">Installation</a></td>
+<td><a href="user-guide/">Usage</a></td>
+<td><a
+        href="https://tvraman.github.io/emacspeak/tips.html">Tips</a></td>
+<td><a href="https://tvraman.github.io/emacspeak/applications.html">Tools</a></td>
+   </tr>
+ </table>
       <h2><a id="toc" name="toc">Contents</a></h2>
 
       <ul>
