--- a/html/emacspeak.html
+++ b/html/emacspeak.html
@@ -32,7 +32,7 @@
     <table summary="navigation bar">
       <tr>
 <td colspan="6">
-  <img src="emacspeak.jpg" width="150" height="216" alt="EMACSPEAK Logo"/> </td>
+  <img src="emacspeak.jpg" width="150" height="216" alt="EMACSPEAK"/> </td>
       </tr>
       <tr class="navbar">
 <td><a href=
